Relax tasks scheduling by switching from virtual threads to bounded elastic (#1284)
* Smaller tuning

* Exchange VT scheduler with bounded elastic

* Add JD

* Remove SQL error handling

* Remove testing properties

* Remove VT reference

* Simplify validation code

* Add session lock strategy property for debugging

* Add property comment

* Use concatMap to relax data base load

--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -40,7 +40,7 @@ qbic.data-management.datasource.hikari.validation-timeout=3000
 qbic.data-management.datasource.hikari.max-lifetime=1700000
 qbic.data-management.datasource.hikari.keepalive-time=300000
 # Uncomment for debugging hikari config
-#logging.level.com.zaxxer.hikari=DEBUG
+logging.level.com.zaxxer.hikari=INFO
 
 ### Hibernate for the default datasource
 spring.jpa.database=mysql
@@ -101,6 +101,8 @@ openbis.datasource.dss.url=${OPENBIS_DSS_URL:}
 vaadin.allowed-packages=com.vaadin,org.vaadin,dev.hilla,life.qbic
 # Launch the default browser when starting the application in development mode
 vaadin.launch-browser=false
+# Configures the lock check strategy in Vaadin and enables easier tracing for session lock issues.
+vaadin.sessionLockCheckStrategy=${VAADIN_LOCK_STRATEGY: log}    # or THROW for more restriction and fail fast strategy (e.g. during development)
 ###############################################################################
 ################### Routing ###################################################
 # route for mail confirmation consumption
