--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -102,7 +102,8 @@ vaadin.allowed-packages=com.vaadin,org.vaadin,dev.hilla,life.qbic
 # Launch the default browser when starting the application in development mode
 vaadin.launch-browser=false
 # Configures the lock check strategy in Vaadin and enables easier tracing for session lock issues.
-vaadin.sessionLockCheckStrategy=${VAADIN_LOCK_STRATEGY: log}    # or THROW for more restriction and fail fast strategy (e.g. during development)
+# or THROW for more restriction and fail fast strategy (e.g. during development)
+vaadin.sessionLockCheckStrategy=${VAADIN_LOCK_STRATEGY:log}
 ###############################################################################
 ################### Routing ###################################################
 # route for mail confirmation consumption
