Use sigstore to sign artifacts

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -6,7 +6,9 @@ on:
       versionTag:
         description: 'Version Tag (semantic version)'
         required: true
-
+permissions:
+  id-token: write # This is required for requesting the JWT
+  contents: read # This is required for actions/checkout
 jobs:
   release:
     runs-on: ubuntu-latest
