--- a/pom.xml
+++ b/pom.xml
@@ -261,6 +261,18 @@
           <artifactId>sonar-maven-plugin</artifactId>
           <version>5.0.0.4389</version>
         </plugin>
+      <plugin>
+        <groupId>dev.sigstore</groupId>
+        <artifactId>sigstore-maven-plugin</artifactId>
+        <version>1.3.0</version>
+        <executions>
+          <execution>
+            <id>sigstore-sign</id>
+            <phase>verify</phase>
+            <goals><goal>sign</goal></goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 </project>
