--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.3.6</version>
+    <version>3.5.6</version>
   </parent>
 
   <repositories>
@@ -176,7 +176,11 @@
         <artifactId>jackson-annotations</artifactId>
         <version>${jackson.version}</version>
       </dependency>
-
+          <dependency>
+            <groupId>com.apicatalog</groupId>
+            <artifactId>titanium-json-ld</artifactId>
+            <version>1.6.0</version>
+          </dependency>
     </dependencies>
 
   </dependencyManagement>
@@ -185,7 +189,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>license-maven-plugin</artifactId>
-        <version>2.6.0</version> <!-- Use the latest version -->
+        <version>2.7.0</version> <!-- Use the latest version -->
         <executions>
           <execution>
             <goals>
@@ -259,7 +263,7 @@
         <plugin>
           <groupId>org.sonarsource.scanner.maven</groupId>
           <artifactId>sonar-maven-plugin</artifactId>
-          <version>5.0.0.4389</version>
+          <version>5.2.0.4988</version>
         </plugin>
       <plugin>
         <groupId>dev.sigstore</groupId>
@@ -275,4 +279,65 @@
       </plugin>
     </plugins>
   </build>
+  <profiles>
+    <profile>
+      <id>sigcheck</id>
+      <activation><file><exists>src/main</exists></file></activation>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-site-plugin</artifactId>
+              <version>4.0.0-M16</version>
+            </plugin>
+            <plugin>
+              <groupId>org.simplify4u.plugins</groupId>
+              <artifactId>pgpverify-maven-plugin</artifactId>
+              <version>1.19.1</version>
+              <dependencies>
+                <dependency>
+                  <groupId>org.simplify4u</groupId>
+                  <artifactId>pgp-keys-map</artifactId>
+                  <version>2025.03.15</version> <!-- use latest available -->
+                </dependency>
+              </dependencies>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+        <plugins>
+          <plugin>
+            <groupId>org.simplify4u.plugins</groupId>
+            <artifactId>pgpverify-maven-plugin</artifactId>
+            <executions>
+              <!-- bind early so you fail fast -->
+              <execution>
+                <id>pgp-verify</id>
+                <goals><goal>check</goal></goals>
+                <phase>validate</phase>
+              </execution>
+            </executions>
+            <configuration>
+              <!-- verify build plugins too (compiler, surefire, etc.) -->
+              <verifyPlugins>true</verifyPlugins>
+              <verifyPluginDependencies>true</verifyPluginDependencies>
+              <!-- include provided deps if you want to check servlet APIs etc. -->
+              <verifyProvidedDependencies>false</verifyProvidedDependencies>
+              <!-- optionally check SNAPSHOTs as well -->
+              <verifySnapshots>false</verifySnapshots>
+              <!-- add a keys map to lock critical coords to expected fingerprints -->
+              <keysMapLocations>
+                <!-- our overrides / allow-list -->
+                <keysMapLocation>/pgp-keys-map.list</keysMapLocation>
+               <keysMapLocation>${maven.multiModuleProjectDirectory}/pgp-keys-override.list</keysMapLocation>
+              </keysMapLocations>
+              <suppressSignatureOkLogging>true</suppressSignatureOkLogging>
+              <!-- write a JSON report (optional) -->
+              <reportWrite>true</reportWrite>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
