--- a/project-management-infrastructure/pom.xml
+++ b/project-management-infrastructure/pom.xml
@@ -152,6 +152,7 @@
       <dependency>
         <groupId>com.apicatalog</groupId>
         <artifactId>titanium-json-ld</artifactId>
+<!-- Use specific version to avoid revoked outdated version-->
         <version>1.6.0</version>
       </dependency>
     </dependencies>
