--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,7 @@
           <dependency>
             <groupId>com.apicatalog</groupId>
             <artifactId>titanium-json-ld</artifactId>
+<!-- Use specific version to avoid revoked outdated version-->
             <version>1.6.0</version>
           </dependency>
     </dependencies>
