--- a/project-management-infrastructure/pom.xml
+++ b/project-management-infrastructure/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>life.qbic</groupId>
     <artifactId>datamanager</artifactId>
-    <version>1.10.14</version>
+    <version>1.11.0</version>
   </parent>
 
   <groupId>life.qbic.identity</groupId>
@@ -29,7 +29,7 @@
     <dependency>
       <groupId>life.qbic</groupId>
       <artifactId>project-management</artifactId>
-      <version>1.10.14</version>
+      <version>1.11.0</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -147,5 +147,14 @@
       <artifactId>spring-boot-autoconfigure</artifactId>
     </dependency>
   </dependencies>
-
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>com.apicatalog</groupId>
+        <artifactId>titanium-json-ld</artifactId>
+<!-- Use specific version to avoid revoked outdated version-->
+        <version>1.6.0</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 </project>
