--- a/project-management/pom.xml
+++ b/project-management/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>datamanager</artifactId>
     <groupId>life.qbic</groupId>
-    <version>1.10.14</version>
+    <version>1.11.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>project-management</artifactId>
@@ -48,13 +48,13 @@
     <dependency>
       <groupId>life.qbic</groupId>
       <artifactId>application-commons</artifactId>
-      <version>1.10.14</version>
+      <version>1.11.0</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>life.qbic</groupId>
       <artifactId>logging</artifactId>
-      <version>1.10.14</version>
+      <version>1.11.0</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -65,7 +65,7 @@
     <dependency>
       <groupId>life.qbic</groupId>
       <artifactId>domain-concept</artifactId>
-      <version>1.10.14</version>
+      <version>1.11.0</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -88,18 +88,24 @@
     <dependency>
       <groupId>life.qbic.datamanager</groupId>
       <artifactId>identity-api</artifactId>
-      <version>1.10.14</version>
+      <version>1.11.0</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>life.qbic.finances</groupId>
       <artifactId>finances-api</artifactId>
-      <version>1.10.14</version>
+      <version>1.11.0</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.hibernate.orm</groupId>
       <artifactId>hibernate-core</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>io.smallrye</groupId>
+          <artifactId>jandex</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
