Enable sample metadata download

--- a/user-interface/src/main/resources/messages/toast-notifications.properties
+++ b/user-interface/src/main/resources/messages/toast-notifications.properties
@@ -87,6 +87,15 @@ profile.oidc.link.success.level=success
 profile.oidc.link.failed.message.type=html
 profile.oidc.link.failed.message.text=Linking your profile failed: <strong>{0}</strong>.
 profile.oidc.link.failed.level=error
+sample.no-sample-selected.message.type=html
+sample.no-sample-selected.message.text=No samples selected.
+sample.no-sample-selected.level=info
+sample.fetching-metadata.message.type=html
+sample.fetching-metadata.message.text=Fetching metadata for <strong>{0} samples</strong> ...
+sample.fetching-metadata.level=info
+sample.metadata-fetched.message.type=html
+sample.metadata-fetched.message.text=Fetched metadata for <strong>{0} samples</strong>.
+sample.metadata-fetched.level=success
 sample-batch.deleted.success.message.type=html
 sample-batch.deleted.success.message.text=Deleted sample batch <strong>{0}</strong>.
 sample-batch.deleted.success.level=success
