Address change requests

--- a/user-interface/src/main/resources/messages/toast-notifications.properties
+++ b/user-interface/src/main/resources/messages/toast-notifications.properties
@@ -87,7 +87,7 @@ profile.oidc.link.success.level=success
 profile.oidc.link.failed.message.type=html
 profile.oidc.link.failed.message.text=Linking your profile failed: <strong>{0}</strong>.
 profile.oidc.link.failed.level=error
-rawdata.no-dataset-selected.message.type=html
+rawdata.no-dataset-selected.message.type=text
 rawdata.no-dataset-selected.message.text=Please select datasets and try again.
 rawdata.no-dataset-selected.level=info
 sample.no-sample-selected.message.type=html
