--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     </license>
   </licenses>
   <modules>
+    <module>datamanager-bom</module>
     <module>user-interface</module>
     <module>identity</module>
     <module>broadcasting</module>
@@ -136,62 +137,19 @@
       <url>https://qbic-repo.qbic.uni-tuebingen.de/repository/maven-snapshots</url>
     </snapshotRepository>
   </distributionManagement>
+
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>org.spockframework</groupId>
-        <artifactId>spock-core</artifactId>
-        <version>2.4-M4-groovy-4.0</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.spockframework</groupId>
-        <artifactId>spock-spring</artifactId>
-        <version>2.4-M4-groovy-4.0</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.groovy</groupId>
-        <artifactId>groovy-all</artifactId>
-        <version>4.0.24</version>
+        <groupId>life.qbic</groupId>
+        <artifactId>datamanager-bom</artifactId>
+        <version>1.11.0</version>
         <type>pom</type>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.jobrunr</groupId>
-        <artifactId>jobrunr-spring-boot-3-starter</artifactId>
-        <version>7.3.2</version>
-      </dependency>
-      <dependency>
-        <groupId>com.fasterxml.jackson.core</groupId>
-        <artifactId>jackson-core</artifactId>
-        <version>${jackson.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.fasterxml.jackson.core</groupId>
-        <artifactId>jackson-databind</artifactId>
-        <version>${jackson.version}</version>
-      </dependency>
-      <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310 -->
-      <dependency>
-        <groupId>com.fasterxml.jackson.datatype</groupId>
-        <artifactId>jackson-datatype-jsr310</artifactId>
-        <version>${jackson.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.fasterxml.jackson.core</groupId>
-        <artifactId>jackson-annotations</artifactId>
-        <version>${jackson.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.apicatalog</groupId>
-        <artifactId>titanium-json-ld</artifactId>
-        <!-- Use specific version to avoid revoked outdated version-->
-        <version>1.6.0</version>
+        <scope>import</scope>
       </dependency>
     </dependencies>
-
   </dependencyManagement>
+
   <build>
     <plugins>
       <plugin>
