--- a/subscription-provider/pom.xml
+++ b/subscription-provider/pom.xml
@@ -8,14 +8,11 @@
     <version>1.11.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-  <groupId>life.qbic.logging</groupId>
   <artifactId>subscription-provider</artifactId>
   <dependencies>
     <dependency>
-      <groupId>life.qbic.logging</groupId>
+      <groupId>life.qbic</groupId>
       <artifactId>subscription-api</artifactId>
-      <version>1.11.0</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>com.sun.mail</groupId>
