--- a/user-interface/pom.xml
+++ b/user-interface/pom.xml
@@ -58,25 +58,12 @@
     </pluginRepository>
   </pluginRepositories>
 
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>com.vaadin</groupId>
-        <artifactId>vaadin-bom</artifactId>
-        <version>${vaadin.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
-
   <dependencies>
-    <!-- Needed because you have Groovy in src/main/** -->
+    <!-- Needed because we have Groovy in src/main/** -->
     <dependency>
       <groupId>org.apache.groovy</groupId>
       <artifactId>groovy-all</artifactId>
       <type>pom</type>
-      <!-- no version, no scope => compile by default -->
     </dependency>
 
     <!-- tests stay test-scoped -->
@@ -145,7 +132,6 @@
     <dependency>
       <groupId>javax.cache</groupId>
       <artifactId>cache-api</artifactId>
-      <version>1.1.1</version>
     </dependency>
     <dependency>
       <groupId>com.mysql</groupId>
@@ -154,12 +140,10 @@
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
-      <version>[2.2.224,)</version>
     </dependency>
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
-      <version>2.19.0</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -247,13 +231,11 @@
     <dependency>
       <groupId>org.apache.poi</groupId>
       <artifactId>poi</artifactId>
-      <version>5.4.0</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
     <dependency>
       <groupId>org.apache.poi</groupId>
       <artifactId>poi-ooxml</artifactId>
-      <version>5.4.0</version>
     </dependency>
     <dependency>
       <groupId>life.qbic</groupId>
