--- a/finances/pom.xml
+++ b/finances/pom.xml
@@ -3,7 +3,7 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <groupId>life.qbic</groupId>
+    <groupId>life.qbic.datamanager</groupId>
     <artifactId>datamanager</artifactId>
     <version>1.11.0</version>
   </parent>
@@ -42,7 +42,7 @@
       <artifactId>jakarta.persistence-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>life.qbic.finances</groupId>
+      <groupId>life.qbic.datamanager</groupId>
       <artifactId>finances-api</artifactId>
       <version>1.11.0</version>
       <scope>compile</scope>
