--- a/identity/pom.xml
+++ b/identity/pom.xml
@@ -4,7 +4,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>datamanager</artifactId>
-    <groupId>life.qbic</groupId>
+    <groupId>life.qbic.datamanager</groupId>
     <version>1.11.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -50,25 +50,25 @@
       <artifactId>logback-classic</artifactId>
     </dependency>
     <dependency>
-      <groupId>life.qbic</groupId>
+      <groupId>life.qbic.datamanager</groupId>
       <artifactId>broadcasting</artifactId>
       <version>1.11.0</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>life.qbic</groupId>
+      <groupId>life.qbic.datamanager</groupId>
       <artifactId>application-commons</artifactId>
       <version>1.11.0</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>life.qbic</groupId>
+      <groupId>life.qbic.datamanager</groupId>
       <artifactId>logging</artifactId>
       <version>1.11.0</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>life.qbic</groupId>
+      <groupId>life.qbic.datamanager</groupId>
       <artifactId>domain-concept</artifactId>
       <version>1.11.0</version>
       <scope>compile</scope>
