--- a/logging/pom.xml
+++ b/logging/pom.xml
@@ -4,7 +4,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>datamanager</artifactId>
-    <groupId>life.qbic</groupId>
+    <groupId>life.qbic.datamanager</groupId>
     <version>1.11.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -51,7 +51,7 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>life.qbic.logging</groupId>
+      <groupId>life.qbic.datamanager</groupId>
       <artifactId>subscription-api</artifactId>
       <version>1.11.0</version>
       <scope>compile</scope>
