--- a/subscription-api/pom.xml
+++ b/subscription-api/pom.xml
@@ -4,7 +4,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>datamanager</artifactId>
-    <groupId>life.qbic</groupId>
+    <groupId>life.qbic.datamanager</groupId>
     <version>1.11.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
