--- a/subscription-provider/pom.xml
+++ b/subscription-provider/pom.xml
@@ -4,14 +4,14 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>datamanager</artifactId>
-    <groupId>life.qbic</groupId>
+    <groupId>life.qbic.datamanager</groupId>
     <version>1.11.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>subscription-provider</artifactId>
   <dependencies>
     <dependency>
-      <groupId>life.qbic</groupId>
+      <groupId>life.qbic.datamanager</groupId>
       <artifactId>subscription-api</artifactId>
     </dependency>
     <dependency>
@@ -28,7 +28,7 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>life.qbic</groupId>
+      <groupId>life.qbic.datamanager</groupId>
       <artifactId>logging</artifactId>
     </dependency>
   </dependencies>
