--- a/.github/workflows/nexus-publish-snapshots.yml
+++ b/.github/workflows/nexus-publish-snapshots.yml
@@ -8,6 +8,7 @@ on:
   push:
     branches:
       - development
+      - hotfix/*
 permissions:
   id-token: write # This is required for requesting the JWT
   contents: read # This is required for actions/checkout
