--- a/.github/workflows/nexus-publish-snapshots.yml
+++ b/.github/workflows/nexus-publish-snapshots.yml
@@ -8,7 +8,9 @@ on:
   push:
     branches:
       - development
-      - hotfix/*
+  pull_request:
+    branches:
+      - main
 permissions:
   id-token: write # This is required for requesting the JWT
   contents: read # This is required for actions/checkout
