--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -28,4 +28,4 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
       - name: Run mvn package
-        run: VAADIN_OFFLINE_KEY=${{ secrets.VAADIN_SERVER_23_2 }} mvn -B package --file pom.xml
+        run: mvn -B package --file pom.xml
