Update version during release for all project modules (#1348)
Fixes the CI build.
As the project structure changed and the bom module does not have the datamanager module as a parent, we need to modify the version bumping. In addition to that the snapshots are now deployed when PRs against main are opened (ncluding hotfix prs so they can be tested before merging)
distributionManagement is provided for the bom module as it is not inherited.

--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -4,9 +4,6 @@ on:
   push:
     branches:
       - '**'
-  pull_request:
-    # The branches below must be a subset of the branches above
-    branches: [ main, master ]
 
 jobs:
   package:
@@ -28,4 +25,4 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
       - name: Run mvn package
-        run: VAADIN_OFFLINE_KEY=${{ secrets.VAADIN_SERVER_23_2 }} mvn -B package --file pom.xml
+        run: mvn -B package --file pom.xml
