--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -10,6 +10,9 @@ on:
     branches:
       - development
       - main
+permissions:
+  id-token: write # This is required for requesting the JWT
+  contents: read # This is required for actions/checkout
 jobs:
   sonarcloud:
     runs-on: ubuntu-latest
@@ -17,6 +20,13 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
+      - name: Debug OIDC (get a token)
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const token = await core.getIDToken('sigstore'); // audience example
+            core.setSecret(token);
+            console.log('OIDC token acquired. Length:', token.length);
       - name: Set up JDK 21
         uses: actions/setup-java@v5
         with:
