--- a/datamanager-app/src/main/resources/application.properties
+++ b/datamanager-app/src/main/resources/application.properties
@@ -138,6 +138,17 @@ qbic.external-service.person-search.orcid.scope=/read-public
 qbic.external-service.person-search.orcid.grant-type=client_credentials
 qbic.external-service.person-search.orcid.issuer=${ORCID_SEARCH_ISSUER_URL:https://orcid.org}
 
+#### Remote RDM instance OAUTH configuration
+spring.security.oauth2.client.registration.rdm.client-name=invenio
+spring.security.oauth2.client.registration.rdm.client-id=${RMD_CLIENT_ID:id}
+spring.security.oauth2.client.registration.rdm.client-secret=${RDM_CLIENT_SECRET:secret}
+spring.security.oauth2.client.registration.rdm.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.rdm.redirect-uri=${RDM_REDIRECT_URI:{baseUrl}/login/oauth2/code/invenio}
+spring.security.oauth2.client.registration.rdm.scope=openid
+spring.security.oauth2.client.provider.rdm.authorization-uri=${ORCID_AUTHORIZATION_URL:https://inveniordm.web.cern.ch/oauth/authorize}
+spring.security.oauth2.client.provider.rdm.token-uri=${ORCID_TOKEN_URI:https://inveniordm.web.cern.ch/oauth/authorize/oauth/token}
+spring.security.oauth2.client.provider.rdm.user-info-uri=${ORCID_USERINFO_URI:https://inveniordm.web.cern.ch/oauth/authorize/oauth/userinfo}
+spring.security.oauth2.client.provider.rdm.jwk-set-uri=${ORCID_JWK_SET_URI:https://inveniordm.web.cern.ch/oauth/authorize/oauth/jwks}
 ###############################################################################
 ################### ActiveMQ Artemis ##########################################
 # ActiveMQ Artemis is used as a global message broker handling
